Unset justify because of a bug on iOS Safari

--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -85,7 +85,6 @@ main
   p
     margin-bottom: 2rem
     line-height: 2
-    text-align: justify
 
   ul,
   ol
@@ -94,7 +93,6 @@ main
 
   li
     line-height: 2
-    text-align: justify
 
   img
     display: block
